# slack-public-holidays-bot

./: Cargo.toml  README.md
src/: main.rs
