[package]
name = "public-holiday-slackbot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.15", features = ["derive"] }
isocountry = "0.3.2"
itertools = "0.12.1"
serde = { version = "1.0.207", features = ["derive"] }
serde_json = "1.0.125"
ureq = { version = "2.10.1", features = ["json"] }
